# vertexenum

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
docs/: benchmark.md  developer_documentation.md
examples/: complex.R  complex.py  simple.py
src/vertexenum/: __init__.py  _bindings.py
src/vertexenum/csrc/: lrslib.c  lrsmp.c  lrsmp.h  pyvertexenum.c
tests/: test_vertexenum.py
